[tool.poetry]
name = "asl-translator"
version = "0.1.0"
description = "American Sign Language (ASL) real-time translator"
authors = ["Rinald Shabani <rinaldshabani@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.3.0"
tensorflow = "^2.4.1"
seaborn = "^0.11.1"
opencv-contrib-python = "^4.5.2"
mediapipe = "^0.8.3"
scikit-image = "^0.18.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
